--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sanjeev/mongodb",
+    "name": "sanjeevaasoori/mongodb",
     "description": "Extension Library for MongoDb Functions",
     "type": "library",
     "license": "MIT",
@@ -9,7 +9,7 @@
             "email": "sanjeev.a.rangaswamy@gmail.com"
         }
     ],
-    "version" : "1.0.0",
+    "version" : "1.1.0",
     "require": {
         "php": ">=7.0.0",
         "mongodb/mongodb": "^1.9"
